fixed sm layout bug

--- a/src/components/shared/components/flipCard.scss
+++ b/src/components/shared/components/flipCard.scss
@@ -1,3 +1,5 @@
+@import "../../../sass/variables";
+
 .share__flip-card {
   color:#fff;
 
@@ -33,6 +35,7 @@
   @media only screen and (hover: none) {
     overflow: hidden;
     height: auto;
+    box-shadow: $shadow-dark;
 
 
     &__front,
