--- a/src/sass/components/greeting.scss
+++ b/src/sass/components/greeting.scss
@@ -16,7 +16,7 @@
   @media only screen and ( max-width:$bp-sm) {
     min-width: auto;
     width: 70%;
-    height: 100vh;
+    height: 80vh;
 
   }
 
