--- a/src/sass/components/projects.scss
+++ b/src/sass/components/projects.scss
@@ -79,8 +79,6 @@
   &__img {
     width: 100%;
     
-    // padding: 2rem;
-    background-color: rgb(252, 0, 0);
     
     & > img {
       width: 100%;
